--- a/index.html
+++ b/index.html
@@ -40,48 +40,49 @@
   </head>
   <body>
     <div class="container">
-      <div class="span2 logo">
-	Logo
+      <div class="row navigation">
+	<div class="span2 logo">
+	  Logo
+	</div>
+	<div class="span6 blank">
+	  Blank
+	</div>
+	<div class="span4 about">
+	  About
+	</div>
+      </div>	
+      <div class="row heading">
+	<div class="span12">
+	  <h1>Bitstarter Title</h1>
+	</div>
       </div>
-      <div class="span6 blank">
-	Blank
+      <div class="row subheading">
+	<div class="span12">
+	  <p class="lead">This is my first bitstarter project.</p>
+	</div>
       </div>
-      <div class="span4 about">
-	About
-      </div>
+      <div class="row pitch">
+	<div class="span6 video">
+	  Video
+	</div>
+	<div class="span6">
+	  <div class="thermometer">
+	    Thermometer
+	  </div>
+	  <div class="order">
+	    Order
+	  </div>
+	  <div class="social">
+	    Social
+	  </div>
+	</div>
     </div>     
-    <div class="row heading">
-      <div class="span12">
-	<h1>Bitstarter Title</h1>
-      </div>
-    </div>
-    <div class="row subheading">
-      <div class="span12">
-	<p class="lead">This is my first bitstarter project.</p>
-      </div>
-    </div>
-    <div class="row pitch">
-      <div class="span6 video">
-	Video
-      </div>
-      <div class="span6">
-	<div class="thermometer">
-	  Thermometer
-	</div>
-	<div class="order">
-	  Order
-	</div>
-	<div class="social">
-	  Social
-	</div>
-      </div>
-    </div>     
-    <div class="row section 1">
+    <div class="row section1">
       <div class="span12">
 	Marketing Section 1
       </div>
     </div>
-    <div class="row section 2">
+    <div class="row section2">
       <div class="span12">
 	Marketing Section 2
       </div>
