--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
         <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
         <div class="row-fluid heading">
             <div class="span12">
-              <h1>Product</h1>
+              <h1>SocialSuite</h1>
             </div>
         </div>
         <div class="row-fluid subheading">
             <div class="span12">
             <!-- Special typography from Bootstrap for lead paragraph. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-              <p class="lead">One sentence description</p>
+              <p class="lead">Add interactivity to your presentation!</p>
             </div>
         </div>
         <div class="row-fluid pitch">
             <div class="span5 offset1">
-              <img class="img-polaroid" src="http://placehold.it/480x300">
+                <img class="img-polaroid" src="ConfRoom.png"> 
             </div>
             
             <!-- We define a new 'actions' div to contain statistics, order and share buttons.-->
@@ -157,17 +157,17 @@
                             different in horizontal and vertical layouts, illustrating 
                             media queries. -->
                             <div class="linediv-l">
-                                <h3>1000</h3><p>backers</p>
+                                <h3>400</h3><p>backers</p>
                             </div>
                         </div>
                         <div class="span4">
                             <div class="linediv-c">
-                                <h3>$6000</h3><p>of $10,000</p>
+                                <h3>$3200</h3><p>of $60,000</p>
                             </div>
                         </div>
                         <div class="span4">
                             <div class="linediv-r">
-                                <h3>10</h3><p>days left</p>
+                                <h3>16</h3><p>days left</p>
                             </div>
                         </div>
                     </div>
@@ -176,8 +176,8 @@
                     <!-- Bootstrap progress bar -->
                     <!-- http://twitter.github.io/bootstrap/components.html#progress -->
                     <div class="thermometer progress active">
-                        <div class="bar bar-success" style="width: 60%;"></div>
-                        <div class="bar bar-warning" style="width: 40%;"></div>
+                        <div class="bar bar-success" style="width: 5%;"></div>
+                        <div class="bar bar-warning" style="width: 95%;"></div>
                     </div>
                 </div>                
                 <div class="span6 offset3 order">
@@ -200,21 +200,24 @@
         <!-- http://placehold.it/ -->
         <div class="row-fluid section1">
             <div class="span5 offset1 asset">
-                <img class="img-polaroid" src="http://placehold.it/480x300">
+                <img class="img-polaroid" src="ScreenShot.png"> 
             </div>
             <div class="span5 copy">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec
-                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-                    volutpat lorem ut congue malesuada. In facilisis scelerisque
-                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-                    risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-                    rutrum, nunc leo tempus nisl, eu mollis justo veli at
-                    nunc. Fusce nec egestas sem. Donec fringilla.
+                    <i>SocialSuite</i> is the perfect solution to take your company meeting,
+                    presentation and/or conference to the next level.
+                    <i>SocialSuite</i> will help you achieve an unpresidented level of
+                    interaction with your audience.
+                </p>
+                <p>
+                    Your audience will be able to communicate with you and the other 
+                    participants using any common technology, old and new. The technological
+                    requirements can be as low as an old mobile phone, 
+                    as long as it can send a SMS-message it will do!
+                </p>
+                <p>
+                    They will be able to pose questions, vote in polls,
+                    share their views, contribute expertise to name just a few... 
                 </p>
             </div>
         </div>
@@ -222,21 +225,22 @@
         <div class="row-fluid section2">
             <div class="span5 offset1 copy copy-right">
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec
-                    porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu
-                    mollis justo velit at nunc. Fusce nec egestas sem. Donec
-                    fringilla ante lectus, a pellentesque lacus dignissim ac. Sed
-                    volutpat lorem ut congue malesuada. In facilisis scelerisque
-                    turpis sed lacinia. Donec in orci lectus. Donec auctor semper
-                    quam, eget rhoncus purus fringilla id. Phasellus id nibh eu
-                    risus ultrices adipiscing. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit. Donec porta, dui sagittis hendrerit
-                    rutrum, nunc leo tempus nisl, eu mollis justo veli at
-                    nunc. Fusce nec egestas sem. Donec fringilla.
+                    <i>SocialSuite</i> is the ultimate tool to help you integrate information
+                    from various sources in real time, before a live audience.
+                </p>
+                <p>
+                    <i>SocialSuite</i> is able to integrate simple SMS messages and show it as part of
+                    the conversation or recognise the message as a vote for a poll you are running,
+                    but it is not limited to that ... 
+                </p>
+                <p>
+                    Ofcourse you can also obtain user interaction and votes using the more popular 
+                    sources like Twitter, Facebook, traditional forms on a webpage....
                 </p>
             </div>
             <div class="span5 asset">
-                <img class="img-polaroid" src="http://placehold.it/480x300">
+<!--            <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+                <img class="img-polaroid" src="socialsuite.png"> 
             </div>
         </div>
 
