--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </div>
             <div class="span5 asset">
 <!--            <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-                <img class="img-polaroid" src="images/ocialsuite.png"> 
+                <img class="img-polaroid" src="images/socialsuite.png"> 
             </div>
         </div>
 
