Corrections for the image path

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
       </div>
       <div class="row-fluid pitch">
         <div class="span5 offset1 video">
-            <img class="img-polaroid" src="ConfRoom.png"> 
+            <img class="img-polaroid" src="images/ConfRoom.png"> 
         </div>
 
         <!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -237,7 +237,7 @@
       <!-- http://placehold.it -->
       <div class="row-fluid section1">
         <div class="span5 offset1 asset">
-            <img class="img-polaroid" src="ScreenShot.png"> 
+            <img class="img-polaroid" src="images/ScreenShot.png"> 
       </div>
         <div class="span5 copy">
             <p>
@@ -276,7 +276,7 @@
             </p>
         </div>
         <div class="span5 asset">
-            <img class="img-polaroid" src="socialsuite.png"> 
+            <img class="img-polaroid" src="images/socialsuite.png"> 
         </div>
       </div>
 
